UPDATE: implement csrf protection

--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -20,6 +20,7 @@
                 <%- include('../includes/alert.ejs') %>
 
                 <form action="/auth/forgot-password" method="POST" class="w-full mt-6 space-y-4">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
                     <div class="form-control">
                         <label for="email">Email address</label>
