--- a/views/auth/create-account.ejs
+++ b/views/auth/create-account.ejs
@@ -21,6 +21,7 @@
 
 
                 <form method="POST" action="/auth/create-account" class="w-full mt-6 space-y-4">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     
                     <div class="form-control">
                         <label for="firstName">First name</label>
