--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -34,6 +34,7 @@
                 <% } %>
 
                 <form action="/auth/reset-password" method="POST" class="w-full mt-6 space-y-4">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
                     <input type="hidden" name="token" value="<%= queryData.token %>" />
                     <input type="hidden" name="email" value="<%= queryData.email %>" />
