--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -8,6 +8,7 @@
         <% } else { %>
             <a href="/user/polls">My Dashboard</a>
             <form action="/auth/logout" method="POST">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button class="btn btn-primary">Logout</button>
             </form>
         <% } %>
