--- a/views/polls/index.ejs
+++ b/views/polls/index.ejs
@@ -7,6 +7,7 @@
       <div class="container py-4 space-y-6">
 
         <form action="/" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="form-control">
 
             <label for="search">Search for polls</label>
