--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -62,6 +62,7 @@
                     <div class="flex items-center justify-center h-screen">
                         <div class="bg-white p-8 rounded-md">
                             <form id="deletePollForm" method="POST">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                 <input type="hidden" id="pollIdInput" name="pollId">
                                 <p class="text-xl font-semibold mb-4">Are you sure you want to delete this poll?</p>
                                 <button type="submit" class="btn hover:!bg-red-500/90 bg-red-500 text-white">Delete</button>
